--- a/react-components/src/style/output-components-style.css
+++ b/react-components/src/style/output-components-style.css
@@ -19,6 +19,7 @@
     user-select: none;
     align-self: center;
     justify-self: center;
+    cursor: move;
 }
 .remove-component-button {
     background: none;
