Rename Analyses to Views in trace explorer
Fixes #292

Analyses are an abstract concept of computation, and more importantly,
the dataproviders are shown, they have a one for one relation to views,
but a many to one relation to analyses, so views is more accurate too.

Signed-off-by: Matthew Khouzam <matthew.khouzam@ericsson.com>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -2,7 +2,7 @@
     --trace-extension-list-line-height: 16px;
 }
 
-#trace-explorer-analysis-widget,
+#trace-explorer-views-widget,
 #trace-explorer-opened-traces-widget {
     height: 100%;
 }
@@ -13,7 +13,7 @@
 }
 
 .trace-explorer-opened,
-.trace-explorer-analysis,
+.trace-explorer-views,
 .trace-explorer-tooltip {
     margin: 0 2px;
 }
