Fix incorrect resizing of XY Charts
Fixes #309

Signed-off-by: Bernd Hufmann <Bernd.Hufmann@ericsson.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -49,6 +49,11 @@
     display: flex;
 }
 
+#xy-main {
+    width: 100%;
+    display: flex;
+}
+
 #main {
     border: 1px solid;
     margin: 10px 0;
