Change the color of the title bar on mouse-over
 The entire title bar changes color when the cursor is on it. This shows the user that they can click and drag on any part of the title bar to move the panel.

Fixes #240

Signed-off-by: Ibrahim Fradj <ibrahim.fradj@ericsson.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -10,6 +10,9 @@
     display: grid;
     grid-template-rows: 25px 1fr;
 }
+.widget-handle :hover {
+    background-color: var(--theia-list-hoverBackground); 
+}
 .title-bar-label {
     text-align: center;
     writing-mode: vertical-rl;
