Reduce the resizable area of the widget
fixes #265

Signed-off-by: muddana-satish <satish.muddana@ericsson.com>

--- a/react-components/style/trace-context-style.css
+++ b/react-components/style/trace-context-style.css
@@ -25,3 +25,8 @@
     overflow-y: scroll;
     overflow-x: hidden;
 }
+
+.react-grid-item > .react-resizable-handle {
+    width: 10px !important;
+    height: 10px !important;
+}
