Change the placeholder background color
fixes #365

Signed-off-by: muddana-satish <satish.muddana@ericsson.com>

--- a/react-components/style/trace-context-style.css
+++ b/react-components/style/trace-context-style.css
@@ -10,7 +10,7 @@
 }
 
 .react-grid-item.react-grid-placeholder {
-    background: var(--theia-accent-color3);
+    background: var(--theia-badge-background) !important;
 }
 
 .trace-context-container {
