Show view message when there is no data to provide (#447)
* Show view message when there is no data to provide

Some views weren't able to display any data after the completion of the trace's analysis.
The problem was due to the fact that some provided models are empty server side because
they were no relevant trace events to display.

We choose to display a message indicating that there are no data to display in those cases
and update the state of the analysis client side. It will allow a better clarity of the user
experience.

Fixes #406
Signed-off-by: Jeff Godonou <jeffalecgodonou@gmail.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -81,6 +81,16 @@ canvas {
     align-self: center;
 }
 
+.no-data {
+    font-size: 24px;
+    text-align: center;
+    position: relative;
+    transform: translate(0, -50%);
+    top: 50%;
+    width: 90%;
+    align-self: center;
+}
+
 .table-tree>tbody>tr:nth-child(1)>th {
     background-color: var(--theia-editor-background);
     position: sticky;
