Output container resize handlers visible in dark theme
fixes #531

Signed-off-by: hriday-panchasara <hriday.panchasara@ericsson.com>

--- a/react-components/style/trace-context-style.css
+++ b/react-components/style/trace-context-style.css
@@ -30,3 +30,8 @@
     width: 10px !important;
     height: 10px !important;
 }
+
+.react-grid-item > .react-resizable-handle::after {
+    border-right-color: var(--theia-ui-font-color0) !important;
+    border-bottom-color: var(--theia-ui-font-color0) !important;
+}
