Show ellipsis for text overflow in events table
fixes #538

Signed-off-by: hriday-panchasara <hriday.panchasara@ericsson.com>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -164,3 +164,8 @@
 .source-code-tooltip {
     text-decoration: underline;
 }
+
+.ag-react-container {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
