Add overflow ellipsis and tooltips to output title-bar
fixes #537

- Implemented text ellipsis and tooltip to deal with title bar text overflow
- Avoids title-bar texts of adjacent output views being mixed

Signed-off-by: hriday-panchasara <hriday.panchasara@ericsson.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -17,12 +17,14 @@
     text-align: center;
     writing-mode: vertical-rl;
     height: 100%;
-    min-height: 150px;
     transform: rotate(180deg);
     user-select: none;
     align-self: center;
     justify-self: center;
     cursor: move;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .remove-component-button {
     background: none;
