--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -102,6 +102,14 @@ canvas {
     align-self: center;
 }
 
+.analysis-failed-message {
+    font-size: 20px;
+    margin-top: -20px; /* So text is vertically aligned relative to its center rather than its top */
+    transform: translate(0, 50%);
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .table-tree {
     display: grid;
     border-collapse: collapse;
