--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -2,7 +2,12 @@
 /* Main container*/
 .output-container {
     display: flex;
+    position: relative;
     color: var(--theia-ui-font-color0)
+}
+
+.output-container:focus {
+    outline: none;
 }
 
 .widget-handle {
@@ -38,6 +43,8 @@
 .main-output-container {
     display: flex;
     overflow: hidden;
+    position: relative;
+    z-index: -1;
 }
 
 .output-component-tree {
@@ -67,7 +74,7 @@
     display: flex;
 }
 
-#xy-main {
+.xy-main {
     width: 100%;
     display: flex;
 }
