Display loading message on data tree components
While the data tree component is loading data, display an "analysis
running" message in the middle of the component.

The data tree components are still hidden, as metioned in #598.

Contributes to #144.

Signed-off-by: Rodrigo Pinto <rodrigo.pinto@calian.ca>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -87,6 +87,11 @@ canvas {
     align-self: center;
 }
 
+.analysis-running-main-area {
+    font-size: 24px;
+    margin: auto;
+}
+
 .no-data {
     font-size: 24px;
     text-align: center;
