--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -101,8 +101,8 @@ canvas {
     margin: auto;
 }
 
-.no-data {
-    font-size: 24px;
+.chart-message {
+    font-size: 20px;
     text-align: center;
     position: relative;
     transform: translate(0, -50%);
