--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -111,10 +111,10 @@ canvas {
     align-self: center;
 }
 
-.analysis-failed-message {
+.message-main-area {
     font-size: 20px;
-    margin-top: -20px; /* So text is vertically aligned relative to its center rather than its top */
     transform: translate(0, 50%);
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
