Clarify when the Trace Server is Offline
Make use of a status LED placed next to the Trace Viewer label
to indicate server status. Red and Green States indicate when
the server is up/down. LED has a tooltip to show more details
when hovered

Signed-off-by: hriday-panchasara <hriday.panchasara@ericsson.com>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -285,3 +285,8 @@
     align-items: center;
     justify-content: flex-end !important;
 }
+
+#trace\.viewer\.serverCheck {
+    cursor: default;
+    color: green;
+}
