--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -22,6 +22,9 @@
     grid-template-rows: 25px 25px 1fr;
     position: relative;
 }
+.pinned-view-shadow {
+    box-shadow: 0px 4px 6px 0px var(--theia-widget-shadow);
+}
 .title-bar-label {
     text-align: center;
     writing-mode: vertical-rl;
@@ -372,4 +375,9 @@ canvas {
 
 .react-grid-item:hover {
     z-index: 10;
+}
+
+.pin-view-icon {
+    margin-top: 5px;
+    transform: rotate(180deg);
 }
