Improve filter text box discoverability
This commit makes the text box for filter in the filter-tree
more noticeable and recognizable as a text box by adding rounded
borders and a filter-icon.

Signed-off-by: Hoang Thuan Pham <hoang.pham@calian.ca>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -296,12 +296,21 @@ canvas {
     border: 0px; 
 }
 
+#input-filter-icon {
+    position: absolute;
+    top: 5px;
+    left: 8px;
+}
+
 #input-filter-tree {
     background-color: var(--theia-input-background);
-    border: none;
-    border-bottom: 1px solid var(--theia-input-foreground);
+    border-style: solid;
+    border-color: var(--theia-tree-inactiveIndentGuidesStroke);
+    border-radius: 15px;
     padding: 3px;
-    color: var(--theia-input-placeholder-foreground)
+    margin-bottom: 5px;
+    text-indent: 23px;
+    color: var(--theia-input-placeholder-foreground);
 }
 
 .ag-theme-balham{
