Selected Row Visibility
Filter-tree and timeline-chart rows are now highlighted when selected.  Selecting a row in the timeline-chart selects the row in the filter-tree, and vice-versa.  Highlighted color matches the current color theme.

Fixes: #772, #774

Signed-off-by: Will Yang <william.yang@ericsson.com>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -236,7 +236,7 @@ canvas {
 }
 
 .table-tree tr:hover td {
-    background-color: var(--theia-list-hoverBackground) !important;
+    background-color: var(--theia-list-hoverBackground);
 }
 
 .table-tree td {
@@ -257,6 +257,10 @@ canvas {
     overflow: hidden;
     white-space: nowrap;
     display: block;
+}
+
+.table-tree td.selected {
+    background-color: var(--theia-selection-background) !important;
 }
 
 .resize-handle {
