Update hover color in open trace explorer
Align with Theia colors.

Fixes #820

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -47,7 +47,8 @@
 
 .trace-list-container:hover,
 .outputs-list-container:hover {
-    background-color: var(--theia-menu-selectionBackground);
+    background-color: var(--theia-list-hoverBackground);
+    color: var(--theia-list-hoverForeground);
     cursor: pointer;
 }
 
