Navigation of markers using new cursor class
Implements functionality to navigate through markers using "," & ".".
Includes new "TimeGraphMarkersChartCursors" layer and uses it with the
chart layer in the Markers Container.

Adds the ability to select rows in the markers-chart layer.

Improves the logic of selected row feature.

Depends on: https://github.com/eclipse-cdt-cloud/timeline-chart/pull/239

Signed-off-by: Bernd Hufmann <bernd.hufmann@ericsson.com>
Signed-Off-By: Will Yang <william.yang@ericsson.com>

fixed hard-coded css

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -235,7 +235,7 @@ canvas {
     display: block;
 }
 
-.table-tree td.selected {
+.table-tree tr.selected td {
     background-color: var(--theia-selection-background) !important;
 }
 
