Fix pagination bar bug
With traces that have very large tables, if the event table is opened
before the trace is fully loaded, the pagination bar does not appear.

The problem is that Ag-grid does not make the pagination bar reactive,
so it only responds to the initial values of the table. Updates of the
number of rows are ignored.

The solution is to create a custom pagination bar that can respond
reactively to data being loaded.

Fixes #849

Signed-off-by: Rodrigo Pinto <rodrigo.pinto@calian.ca>

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -368,3 +368,18 @@ canvas {
     margin-top: 5px;
     transform: rotate(180deg);
 }
+
+.pagination-bar {
+    width: calc(100% - 2px);
+    height: 30px;
+    display: flex;
+    color: var(--theia-descriptionForeground);
+    border: thin solid var(--theia-disabledForeground);
+    border-top: none;
+  }
+
+.pagination-button {
+    border: none;
+    background: transparent;
+    color: var(--theia-foreground);
+}
