Created a widget for properties view in react-components
Changes made:

- Implemented a properties widget in react-components
- Change theia implementation to use the widget from react-components
- File name changes and API changes

This will move the properties widget to the react-components npm package,
so it can be used by both the theia extension and vscode extension.

Signed-off-by: Neel Gondalia ngondalia@blackberry.com

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -14,7 +14,7 @@
 
 .trace-explorer-opened,
 .trace-explorer-views,
-.trace-explorer-tooltip {
+.trace-explorer-item-properties {
     margin: 0 2px;
 }
 
