Created a widget for placeholder view in react-components
Move the placeholder widget to the react-components npm package

This would allow it to be used by both theia and vscode extension

Signed-off-by: hriday-panchasara <hriday.panchasara@ericsson.com>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -303,3 +303,35 @@
     margin-bottom: 2px;
     margin-right: 10px;
 }
+
+.placeholder-container {
+    font-size: var(--theia-ui-font-size1);
+    padding: 5px;
+    position: relative;
+}
+
+.placeholder-container .center {
+    text-align: center;
+}
+
+.placeholder-open-workspace-button-container {
+    margin: auto;
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+}
+
+.plcaeholder-open-workspace-button {
+    padding: 4px 12px;
+    margin-left: 0;
+    width: calc(100% - var(--theia-ui-padding)*4);
+    background: var(--theia-button-background);
+    border: none;
+    color: var(--theia-button-foreground);
+    min-width: 65px;
+    outline: none;
+    cursor: pointer;
+    padding: 4px 9px;
+    margin-left: calc(var(--theia-ui-padding)*2);
+}
