--- a/react-components/style/dialog-component-style.css
+++ b/react-components/style/dialog-component-style.css
@@ -10,19 +10,19 @@
     justify-content: center;
     align-items: center;
     background: rgba(0, 0, 0, 0.3);
-    font-size: var(--theia-ui-font-size1);
+    font-size: var(--trace-viewer-ui-font-size1);
     padding: 2px;
 }
 
 .dialog-header{
-    background-color: var(--theia-statusBar-background);
-    color: var(--theia-statusBar-foreground);
+    background-color: var(--trace-viewer-statusBar-background);
+    color: var(--trace-viewer-statusBar-foreground);
     padding: 5px;
     display: flex;
     justify-content: space-between;
-    font-size: var(--theia-ui-font-size1);
+    font-size: var(--trace-viewer-ui-font-size1);
     min-height: 24px;
-    padding: 0 calc(var(--theia-ui-padding)*2);
+    padding: 0 calc(var(--trace-viewer-ui-padding)*2);
     align-items: center;
     text-align: center;
 }
@@ -33,11 +33,11 @@
 }
 
 .dialog-body{
-    font-size: var(--theia-ui-font-size1);
+    font-size: var(--trace-viewer-ui-font-size1);
 }
 
 .dialog-footer{
-    padding: calc(var(--theia-ui-padding)*2);
+    padding: calc(var(--trace-viewer-ui-padding)*2);
     padding-top: 0px;
     display: flex;
     flex-direction: row;
@@ -56,9 +56,9 @@
     -ms-transform: translate(-50%,-50%);
     min-width: 400px;
     min-height: 150px;
-    background-color: var(--theia-editorWidget-background);
+    background-color: var(--trace-viewer-editorWidget-background);
 }
 
 #trace-overview-selection-dialog-content-container{
-    padding: calc(var(--theia-ui-padding)*2) 0px;
+    padding: calc(var(--trace-viewer-ui-padding)*2) 0px;
 }
