--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -315,9 +315,10 @@
     font-size: var(--trace-viewer-ui-font-size1);
     min-height: 23px;
     white-space: nowrap;
+    font-weight: bold;
 }
 
-.shortcuts-table i {
+.shortcuts-icon {
     color: var(--trace-viewer-button-background);
 }
 
@@ -326,6 +327,22 @@
     vertical-align: middle;
     align-items: center;
     justify-content: flex-end !important;
+    line-height: 10px;
+    display: flex;
+}
+
+.shortcuts-table-keybinding-key {
+    display: inline-block;
+    border-radius: 3px;
+    vertical-align: middle;
+    font-size: 11px;
+    padding: 3px 5px;
+    margin: 0 2px;
+    background-color: var(--trace-viewer-keybindingLabel-background);
+    border: solid 1px var(--trace-viewer-keybindingLabel-border);
+    border-bottom-color: var(--trace-viewer-keybindingLabel-bottomBorder);
+    box-shadow: inset 0 -1px 0 var(--trace-viewer-keybindingLabel-bottomBorder);
+    color: var(--trace-viewer-keybindingLabel-foreground);
 }
 
 .server-status-header {
