Make --trace-extension-list-line-height a mappable CSS variable
The CSS variable --trace-extension-list-line-height is used in both the
vscode and theia trace extension. This commit maps this CSS variable to
--trace-viewer-trace-extension-list-line-height so each extension can
declare its own style.

Signed-off-by: Hoang Thuan Pham <hoang.pham@calian.ca>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -1,5 +1,5 @@
 :root {
-    --trace-extension-list-line-height: 16px;
+    --trace-extension-list-line-height: var(--trace-viewer-trace-extension-list-line-height);
 }
 
 #trace-explorer-views-widget,
