Add support for multi row select and context menu in Timegraph Component
changes made:
- Support for adding context menu via signals
- Support for making multiple selections in data tree of timegraph component
- Added Signals to notify context menu selection and multi row selections

This change will allow for a context menu to be added to the timegraph
component based on the outputDescriptor id via a signal. The component
also adds the ability to select multiple rows. The multi selections can
be passed with the item clicked signal payload as well as through a rowSelectionsChanged
signal. The end goal is to provide the timegraph views with the ability
to make multi-row selections and perform some actions with the selections.

Signed-off-by: Neel Gondalia ngondalia@blackberry.com

--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -239,6 +239,10 @@ canvas {
     background-color: var(--trace-viewer-selection-background) !important;
 }
 
+.table-tree tr.multiselected td {
+    background-color: var(--trace-viewer-list-hoverBackground) !important;
+}
+
 .resize-handle {
     float: right;
     position: absolute;
