Support opening trace files through a dialog
This commit adds another button for opening trace files through a dialog.
Futhermore, the theia-trace-explorer-placeholder-widget can be configured
to render either one or both buttons (Open Trace folder, Open Trace File).

Fixes #1053

Signed-off-by: Neel Gondalia <ngondalia@blackberry.com>

--- a/react-components/style/trace-explorer.css
+++ b/react-components/style/trace-explorer.css
@@ -374,10 +374,12 @@
 
 .placeholder-open-workspace-button-container {
     margin: auto;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
     display: flex;
     justify-content: center;
     align-self: center;
+    max-width: 300px;
 }
 
 .plcaeholder-open-workspace-button {
