--- a/react-components/style/output-components-style.css
+++ b/react-components/style/output-components-style.css
@@ -267,6 +267,7 @@ canvas {
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    border: 0px;
 }
 
 .avail-views-table tr {
